# ironswarm

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  release.yml  test.yml
examples/: demo_http_server.py  http_scenario.py  multi.sh
examples/scenarios/: http_scenario.py
scenarios/: test_scenario.py
scripts/: build-frontend.sh
src/ironswarm/: __init__.py  context.py  helper.py  logging_config.py  lwwelementset.py  metrics_snapshot.py  node.py  scenario.py  scenario_discovery.py  scenario_manager.py  scheduler.py  serialization.py  types.py  volumemodel.py
src/ironswarm/benchmark/: benchmark.py  server.py  simply_benchmark.py
src/ironswarm/datapools/: __init__.py  base_datapool.py  file_datapool.py  iterable_datapool.py  recyclable_datapool.py  recyclable_file_datapool.py
src/ironswarm/journey/: http.py  log.py
src/ironswarm/metrics/: __init__.py  aggregator.py  collector.py  events.py  graphs.py  report.py
src/ironswarm/transport/: __init__.py  zmq.py
src/ironswarm/web/: __init__.py  api.py  server.py  websocket.py
src/ironswarm/web/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/ironswarm/web/frontend/src/: App.vue  router.js  style.css
src/ironswarm/web/frontend/src/components/: Modal.vue
src/ironswarm/web/frontend/src/stores/: clusterStore.js  datapoolStore.js  metricsStore.js  scenarioBuilderStore.js  websocketStore.js
src/ironswarm/web/frontend/src/utils/: formatters.js
src/ironswarm/web/frontend/src/views/: ClusterView.vue  DatapoolView.vue  GraphsView.vue  HistoricalView.vue  MetricsView.vue  ReportsView.vue  ScenarioBuilderView.vue  ScenariosView.vue
tests/: conftest.py  small_file_test_datapool.txt  test_cli.py  test_context.py  test_datapool.py  test_helper.py  test_logging_config.py  test_lwwelementset.py  test_metrics_aggregator.py  test_metrics_collector.py  test_metrics_graphs.py  test_metrics_report.py  test_metrics_sharing.py  test_node.py  test_performance.py  test_scenario_manager.py  test_scheduler.py  test_serialization.py  test_transport.py  test_transport_zmq.py  test_volumemodel.py
