[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ironswarm"
dynamic = ["version"]
description = 'Distributed HTTP load testing framework with journey-based scenarios'
readme = "README.md"
requires-python = ">=3.10"
keywords = ["load-testing", "performance", "http", "distributed", "async"]
authors = [
  { name = "Ryan", email = "ryan@h265.email" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Distributed Computing",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "aiohttp>=3.13.0",
  "pyzmq>=27.1.0",
  "msgpack>=1.0.0",
]

[project.optional-dependencies]
graphs = ["matplotlib>=3.10.0"]

[project.urls]
Documentation = "https://github.com/ryan-h265/ironswarm#readme"
Issues = "https://github.com/ryan-h265/ironswarm/issues"
Source = "https://github.com/ryan-h265/ironswarm"

[project.scripts]
ironswarm = "ironswarm.__init__:main"
ironswarm-metrics-report = "ironswarm.metrics.report:main"
ironswarm-metrics-graphs = "ironswarm.metrics.graphs:main"

[tool.hatch.version]
path = "src/ironswarm/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ironswarm tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/ironswarm"]
# Exclude frontend source files (Vue.js, node_modules, etc.)
# Built static assets in web/static/ are included
exclude = [
  "src/ironswarm/web/frontend/node_modules",
  "src/ironswarm/web/frontend/src",
  "src/ironswarm/web/frontend/public",
  "src/ironswarm/web/frontend/package.json",
  "src/ironswarm/web/frontend/package-lock.json",
  "src/ironswarm/web/frontend/vite.config.js",
  "src/ironswarm/web/frontend/index.html",
  "src/ironswarm/web/frontend/.gitignore",
]

[tool.hatch.build.targets.sdist]
# Source distribution includes frontend source for development
# but built assets should be generated during build process
include = [
  "src/",
  "scripts/",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.coverage.run]
source_pkgs = ["ironswarm", "tests"]
branch = true
parallel = true
omit = [
  "src/ironswarm/__about__.py",
]

[tool.coverage.paths]
ironswarm = ["src/ironswarm", "*/ironswarm/src/ironswarm"]
tests = ["tests", "*/ironswarm/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = false
